--- a/HireHubFrontend/src/App2.css
+++ b/HireHubFrontend/src/App2.css
@@ -1,15 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    /* font-family:'Verdana, Geneva, Tahoma, sans-serif'; */
-     font-family: Arial, Helvetica, sans-serif;
-     color:black;
-  }
-  body{
-    /* background-color: #D1D8C5; */
-    background-color: #ecf3f4;
-    /* background-color: #f6f9fa; */
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+}
+body {
+  background-color: #ecf3f4;
+}
