--- a/HireHubFrontend/src/module/Application.module.css
+++ b/HireHubFrontend/src/module/Application.module.css
@@ -13,7 +13,9 @@
 .applicants {
   margin-top: 200px;
 }
-
+.forMargin {
+  padding-top: 100px;
+}
 .applicants ul {
   display: flex;
   flex-direction: column;
