email verification designing

--- a/HireHubFrontend/src/module/Login.module.css
+++ b/HireHubFrontend/src/module/Login.module.css
@@ -1,68 +1,112 @@
-.container{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 60px;
-    
+.container {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 60px;
 }
 
-.container form{
-    padding: 30px;
-    background-color: white; 
-    display: flex;
-    flex-direction: column;
+.container form {
+  padding: 30px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+.register {
+  color: rgb(82, 82, 82);
+  font-size: 15px;
+}
+.register a {
+  color: blue;
+}
+.verify {
+  color: rgb(82, 82, 82);
+  font-size: 15px;
+}
+.verify a {
+  color: blue;
+  font-size: 15px;
+}
+.inputTag {
+  display: flex;
+  flex-direction: column;
 }
 
-.inputTag{
-    display: flex;
-    flex-direction: column;
+.container form input {
+  display: flex;
+  margin: 10px 0px;
+  padding: 8px;
+  border: none;
+  margin-left: 8px;
+  min-width: 500px;
+  border: 1px solid rgb(222, 217, 217);
+  border-radius: 8px;
 }
 
-.container form input{
-    display: flex;
-    margin: 10px 0px;
-    padding: 8px;
-    border: none;
-    margin-left: 8px;
-    min-width: 500px;
-    border: 1px solid rgb(222, 217, 217);
-    border-radius: 8px;
+.label {
+  font-size: 40px;
+  text-align: center;
 }
 
-.label{
-    font-size: 40px;
-    text-align: center;
-}    
-
-.lgnbtn{
-    background-color: rgba(13, 56, 86, 0.532);
-    color: white;
-    font-weight: bold;
+.lgnbtn {
+  background-color: rgba(13, 56, 86, 0.532);
+  color: white;
+  font-weight: bold;
 }
 
-.lgnbtn:hover{
-    cursor: pointer;
+.lgnbtn:hover {
+  cursor: pointer;
 }
 
-.container a{
-    border-bottom: 1px solid black;
+.container a {
+  border-bottom: 1px solid black;
 }
 
-.container a:hover{
-    cursor: pointer;
+.container a:hover {
+  cursor: pointer;
 }
 
-@media screen and (max-width: 1087px){
-    .img{
-        display: none;
-    }
+@media screen and (max-width: 1087px) {
+  .img {
+    display: none;
+  }
 }
 
-@media screen and (max-width: 600px){
-    .container form input{
-        min-width: 100%; /* Adjust the width to be responsive */
-        margin-left: 0;  /* Remove left margin for better alignment */
-    }
+@media screen and (max-width: 600px) {
+  .container form input {
+    min-width: 100%; /* Adjust the width to be responsive */
+    margin-left: 0; /* Remove left margin for better alignment */
+  }
+}
 
+.verifyContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 60px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.verifyMainConatiner {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 30px;
+}
+.verifyContainer input {
+  width: 300px;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+}
+@media screen and (max-width: 1081px) {
+  .verifyMainConatiner video {
+    display: none;
+  }
+  .verifyContainer {
+    margin-top: 100px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
