--- a/HireHubFrontend/src/module/LatestJob.module.css
+++ b/HireHubFrontend/src/module/LatestJob.module.css
@@ -1,199 +1,104 @@
- /* .jobContainer{
-        display: flex;
-        justify-content:center;
-        margin: 30px;
-        gap:70px;
-        flex-wrap: wrap;
+.maincontainer {
+  padding-bottom: 100px;
+  background-color: white;
+}
+.jobcontainer {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  flex-wrap: wrap;
+  /* align-items: center; */
+}
+.jobcontainer p {
+  font-size: 16px;
+  color: rgb(108, 104, 104);
+}
+.job {
+  display: flex;
+  width: max-content;
+  min-width: 400px;
+  min-height: 200px;
+  max-width: 400px;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  background-color: white;
+  border: 1px solid rgba(128, 128, 128, 0.386);
+}
 
-
-} 
-
-.maincontainer{
-        background-color: white;
+.job:hover {
+  background-color: aliceblue;
 }
-.job{
-        border:0.5px solid gray;
-        border-radius: 4px;
-        padding:30px;
-        min-width: 600px;
-        max-width: 200px;
-        display: flex;
-        gap:50px;
+.save svg path {
+  color: #088395;
 }
-.job:hover{
-        box-shadow: 10px 10px 20px rgba(19, 43, 61, 0.5);
-        background-color: rgba(18, 17, 17, 0.2);
-        cursor: pointer;
+.container img {
+  height: 50px;
+  width: 50px;
+  object-fit: cover;
+  border-radius: 17%;
 }
-.maincontainer h1{
-        text-align: center;
-        margin:30px;
+.employ {
+  background-color: rgba(146, 142, 142, 0.144);
+  padding: 3px;
+  border-radius: 8px;
 }
-.job img{
-        height:70px;
-        object-fit: cover;
+.employ p {
+  color: black;
 }
-.job button{
-        background-color: #088395;
-        border:none;
-        color:white;
-        height:30px;
-        width:100px;
+.applicants {
+  /* background-color: rgba(134, 11, 134, 0.37); */
+  padding: 3px;
+  border-radius: 8px;
+  /* background-color: #08829556; */
+  background-color: rgba(146, 142, 142, 0.144);
+  color: gray;
 }
-.job button:hover{
-        cursor: pointer;
+.type {
+  /* background-color: rgba(196, 81, 9, 0.432); */
+  padding: 3px;
+  border-radius: 8px;
+  background-color: rgba(146, 142, 142, 0.144);
+  color: gray;
 }
-.etype{
-        background-color: rgb(192, 190, 190);
-        margin-left: 10px;
+.last button {
+  background-color: transparent;
+  padding: 6px;
+  width: 90px;
+  border: none;
+  border: 1px solid gray;
+  border-radius: 8px;
+  transition: 1s;
 }
-.detail{
-        display: flex;
-        gap:20px;
-        margin:20px 0px;
-        flex-wrap: wrap;
+.last button:hover {
+  background-color: #088395;
+  color: white;
+  border: 1px solid #088395;
+  cursor: pointer;
 }
-.btns{
-        display: flex;
-        gap:20px;
+.explore {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
 }
-@media screen and (max-width:678px)
-{
-       .detail{
-                margin: 10px 0;
-                display: flex;
-                flex-direction: column;
-                gap:7px;
-                
-       }
-       .btns{
-        display: flex;
-        flex-direction: column;
-        gap:10px;
+.explore button {
+  width: 200px;
+  height: 40px;
+  border: none;
+  border-radius: 8px;
+  background-color: #02636d;
+  color: white;
+  &:hover {
+    cursor: pointer;
+    background-color: #088295fc;
+  }
 }
-       .job{
-        min-width: 300px;
-        align-items: center;
-       }
-       .job img{
-        height:60px;
-        object-fit: cover;
-       }
-}
-.saved{
-        background-color: rebeccapurple;
-} */
- .maincontainer{
-        padding-bottom: 100px;
-        background-color: white;  
- }
- .jobcontainer
- {
-       
-        display: flex;
-        gap:30px;
-        justify-content:center;
-        flex-wrap: wrap;
-        /* align-items: center; */
-
-       
- }
- .jobcontainer p{
-        font-size: 16px;
-        color:rgb(108, 104, 104);
- }
- .job{
-        display: flex;
-        width: max-content;
-        min-width: 400px;
-        min-height: 200px;
-        max-width: 400px;
-        justify-content: space-around;
-        align-items: center;
-        padding:20px;
-        align-items: center;
-        flex-direction: column;
-        border-radius: 10px;
-        background-color: white;
-        border:1px solid rgba(128, 128, 128, 0.386);
-
- }
-
- .job:hover{
-        background-color: aliceblue;
-}
- .save svg path{
-
-        color: #088395;
-       
- }
- .container img{
-        height: 50px;
-        width:50px;
-        object-fit: cover;
-        border-radius: 17%;
- }
- .employ{
-        background-color: rgba(146, 142, 142, 0.144);
-        padding: 3px;
-        border-radius: 8px;
- }
- .employ p{
-       color:black;
- }
- .applicants{
-        /* background-color: rgba(134, 11, 134, 0.37); */
-        padding: 3px;
-        border-radius: 8px;
-        /* background-color: #08829556; */
-        background-color: rgba(146, 142, 142, 0.144);
-        color:gray;
- }
- .type{
-        /* background-color: rgba(196, 81, 9, 0.432); */
-        padding: 3px;
-        border-radius: 8px;
-        background-color: rgba(146, 142, 142, 0.144);
-        color:gray;
- }
- .last button{
-        background-color: transparent;
-        padding: 6px;
-        width:90px;
-        border:none;
-        border:1px solid gray;
-        border-radius: 8px;
-        transition: 1s ;
- }
- .last button:hover{
-        background-color: #088395;
-        color:white;
-        border: 1px solid #088395;
-        cursor: pointer;
- }
- .explore{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 50px;
- }
- .explore button{
-        width: 200px;
-        height:40px;
-        border:none;
-        border-radius: 8px;
-        background-color: #02636d;
-        color:white;
-        &:hover{
-              cursor: pointer;
-              background-color:#088295fc;
-        }
- }
- .similar{
-       display: flex;
-       flex-direction: column;
-       gap:15px;
- }
-.container{
-
+.similar {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
