--- a/HireHubFrontend/src/module/Admin.module.css
+++ b/HireHubFrontend/src/module/Admin.module.css
@@ -146,7 +146,8 @@
 .boxTitle {
   font-size: 16px;
   font-weight: 600;
-  color: gray;
+  /* color: gray; */
+  color: white;
 }
 .count {
   font-size: 24px;
@@ -214,14 +215,14 @@
 /* Title Styling */
 .dashboardSection h1 {
   font-size: 19px;
-  color: #333333fd;
+  color: wheat;
 }
 
 /* Number Display Styling */
 .dashboardSection .number {
   font-size: 2rem;
   font-weight: bold;
-  color: #1e90ff;
+  color: teal;
   margin-top: 10px;
 }
 .dashboard {
